Done with Table

--- a/opera.html
+++ b/opera.html
@@ -73,5 +73,30 @@ woman has gipsy blood in her veins, and she can read destinies.</p>
 <h3><b> BUT.</b></h3><p style="color:rgb(12, 12, 11)">There is a change in store for you!</p>        
 <h3><b>CAPT. </b></h3><p style="color:rgb(8, 8, 8)">A change?</p>
 <h3><b> BUT.</b></h3><p style="color:rgb(8, 8, 8)">Aye—be prepared!</P>
+    <p>
+        <h3> A Table</h3>
+        <table>
+          <tr>
+            <th>Characters</th>
+            <th>Singers</th>
+            <th>Offer</th>
+          </tr>
+          <tr>
+            <td>anusha</td>
+            <td>Shawn Mendes</td>
+            <td>10 million</td>
+          </tr>
+          <tr>
+            <td>jaya</td>
+            <td>Selena Gomez</td>
+            <td>10 million</td>
+          </tr>
+          <tr>
+            <td>lokeshreddy</td>
+            <td>Billie Eilish</td>
+            <td>10 million</td>
+          </tr>
+        </table>
+    </p>
 </body>
 </html>
