created a opera2 to html

--- a/opera.html
+++ b/opera.html
@@ -52,7 +52,7 @@ unconscious moon! Of whom is he thinking? Of some high-born beauty? It may
 be! Who is poor Little Buttercup that she should expect his glance to fall
 on one so lowly! And yet if he knew—if he only knew!</p>
              
-<h3><b>CAPT. </b></h3><p style="color:rgb(28, 28, 28)">(coming down). Ah! Little Buttercup, still on board?
+<h3><b>CAPT. </b></h3><p style="color:rgb(28, 28, 28)"><p class="direction">    (coming down).</p>  Ah! Little Buttercup, still on board?
 That is not quite right, little one. It would have been more respectable to have
 gone on shore at dusk.
 BUT, True, dear Captain—but the recollection of your sad
@@ -61,8 +61,8 @@ pale face seemed to chain me to the ship. I would fain see you smile before I go
 recover my accustomed cheerfulness, for misfortunes crowd upon me, and
 all my old friends seem to have turned against me!BUT, Oh no—do not say "all", dear Captain. That were
 unjust to one, at least.</p>
-<h3><b>CAPT. </b></h3><p style="color:rgb(14, 14, 16)">True, for you are staunch to me. (Aside.) If ever I gave my
-heart again, methinks it would be to such a one as this! (Aloud.) I am
+<h3><b>CAPT. </b></h3><p style="color:rgb(14, 14, 16)">True, for you are staunch to me. <p class="direction">    (Aside)</p> If ever I gave my
+heart again, methinks it would be to such a one as this!<p class="direction">    (Aloud)</p>  I am
 touched to the heart by your innocent regard for me, and were we
 differently situated, I think I could have returned it. But as it
 is, I fear I can never be more to you than a friend.
@@ -98,5 +98,10 @@ woman has gipsy blood in her veins, and she can read destinies.</p>
           </tr>
         </table>
     </p>
+    <a href="opera2.html">Link of opera2.html</a>
+<ul>
+  <li><a class="#" href="opera.html">opera</a></li>
+  <li><a href="opera2.html">opera2</a></li>
+</ul>
 </body>
 </html>
