--- a/opera.html
+++ b/opera.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="gs.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <title>ROYAL</title>
     
 
@@ -106,6 +107,25 @@ woman has gipsy blood in her veins, and she can read destinies.</p>
                 </table>
             </p>
             <li><a href="opera2.html">opera2</a></li>
+            <h2 style="color:blueviolet">Bounous marks</h2>
+    <i class="material-icons">favorite</i>
+    <i class="material-icons">cloud</i>
+    <i class="material-icons">attachment</i>
+    <i class="material-icons">computer</i>
+    <i class="material-icons">fingerprint</i>
+    <i class="material-icons">face</i>
+    <i class="material-icons">fact_check</i>
+    <i class="material-icons">exit_to_app</i><br>
+    <br>
+    <div style="text-align: left;">
+        <img src ="hms .jpg" height ="400" width ="400" class="left">
+    </div>
+    <ul>
+    <li>
+        <a href="opera2.html">LINK TO OPERA 2</a>
+    </li>
+    <li><a href="opera.html">LINK TO OPERA</a></li>
+    </ul>
 
 </body>
 </html>
