--- a/opera2.html
+++ b/opera2.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>And the show goes on</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="gs.css">
 </head>
 <body>
@@ -33,5 +34,24 @@
                         <li><a class="#" href="opera2.html">opera</a></li>
                         
                       </ul>
+                      <h2 style="color:blueviolet">Bonus marks</h2>
+    <i class="material-icons">favorite</i>
+    <i class="material-icons">cloud</i>
+    <i class="material-icons">attachment</i>
+    <i class="material-icons">computer</i>
+    <i class="material-icons">fingerprint</i>
+    <i class="material-icons">face</i>
+    <i class="material-icons">fact_check</i>
+    <i class="material-icons">exit_to_app</i><br>
+    <br>
+    <div style="text-align: left;">
+        <img src ="hms2.jpg" height ="400" width ="400" class="left">
+    </div>
+    <ul>
+    <li>
+        <a href="opera2.html">LINK TO OPERA 2</a>
+    </li>
+    <li><a href="opera.html">LINK TO OPERA</a></li>
+    </ul>
 </body>
 </html>
